--- a/digital clock/index.html
+++ b/digital clock/index.html
@@ -2,34 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clock</title>
+    <link rel="icon" href="/Digital Clock/clock image.jpg">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="clock">
-         <div class="hrs" id="h">
-                12
-         </div>
-         <div class="dts1">
-            :
-         </div> 
-         <div class="mins" id="m">
-            00
-         </div>
-         <div class="dts2">
-            :
-         </div>
-         <div class="scnds" id="s">
-            00
-         </div>
-         <div class="time" id="tm">
-            AM
-         </div>
+    <div class="clock">
+        <div class="hours" id="hrs">
+            12
         </div>
+        <div class="dots1" id="dts1">
+            : 
+        </div>
+        <div class="minutes" id="mins">
+            00 
+        </div>
+        <div class="dots2" id="dts2">
+            : 
+        </div>
+        <div class="seconds" id="scnds">
+            00 
+        </div>
+        <div class="periods" id="prds">
+           PM
+        </div>
+       
     </div>
-    
     <script src="script.js"></script>
 </body>
 </html>
